added the social icons

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -11,6 +12,12 @@
     <section class="content">
         <h1>AQUILA &nbsp; AVEION</h1>
         <img src="./images/aveon.png" class="img-1" alt="aveon">
+        <div class="socials">
+            <i class="fab fa-instagram"></i>
+            <i class="fab fa-twitter-square"></i>
+            <i class="fab fa-snapchat-square"></i>
+            <i class="fas fa-envelope-square"></i>
+        </div>
 
         <nav>
             <ul>
@@ -24,6 +31,8 @@
             <img src="./images/model.jpg" alt="girl">
         </div>
     </section>
+
+   
     
 </body>
 </html>
